--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.1.0",
+    "dayjs": "^1.8.16",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
-    "vue-router": "^3.1.3",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.2.1",
-    "css-loader": "^3.1.0",
     "vue-loader": "^15.7.1",
+    "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.1",
     "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.0",
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "serve": "webpack-dev-server --config build/webpack.dev.js",
