--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-i18n": "^8.14.1",
     "vue-loader": "^15.7.1",
     "vue-router": "^3.1.3",
+    "vue-select": "^3.2.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
@@ -28,5 +29,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0"
+  }
 }
