--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "dayjs": "^1.8.16",
+    "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
