--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "dotenv-webpack": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "vue": "^2.6.10",
-    "vue-i18n": "^8.14.1",
-    "vue-loader": "^15.7.1",
+    "vue-i18n": "^8.15.0",
+    "vue-loader": "^15.7.2",
     "vue-router": "^3.1.3",
     "vue-select": "^3.2.0",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.1.1",
-    "webpack": "^4.37.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
@@ -32,8 +32,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "eslint": "^6.5.1"
+    "eslint": "^6.6.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0"
   }
 }
