--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
-API_URL=htts://stu.wolvnet.de/api
-ASSETS_PATH=https://stu.wolvnet.de/assets
+API_URL=htts://area51.stuniverse.de/api
+ASSETS_PATH=https://area51.stuniverse.de/assets
