--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "serve": "webpack-dev-server --config build/webpack.dev.js",
-    "build-prod": "webpack --config build/webpack.prod.js",
+    "build-production": "webpack --config build/webpack.production.js",
     "build-dev": "webpack --config build/webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
