--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
-API_URL=htts://dev.stuniverse.de/api
+API_URL=https://dev.stuniverse.de/api
 ASSETS_PATH=https://dev.stuniverse.de/assets
